envoy-img/envoy-depl-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-envoy
  labels:
    app: myapp-envoy
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: myapp-envoy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-envoy
  labels:
    app: myapp-envoy
spec:
  selector:
    matchLabels:
      app: myapp-envoy
  replicas: 1
  template:
    metadata:
      labels:
        app: myapp-envoy
    spec:
      containers:
      - name: myapp-envoy
        image: talhawaheed/myapp-envoy:1
        imagePullPolicy: Always
        # env:
        # - name: "ENVOY_LB_ALG"
        #   value: "LEAST_REQUEST"
        # - name: "SERVICE_NAME"
        #   value: "myapp"
        ports:
        - name: http
          containerPort: 80
        - name: envoy-admin
          containerPort: 9901
      tolerations:
      - key: "nodeGroup"
        value: "excl1"
        effect: "NoSchedule"
